main.css correct gap header__content after 800px

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -188,6 +188,12 @@ img {
   }
 }
 
+@media (min-width: 800px) {
+  .header__content {
+    gap: 2rem;
+  }
+}
+
 @media (min-width: 970px) {
   .btn-show {
     flex-basis: 20%;
@@ -195,6 +201,12 @@ img {
 }
 
 @media (min-width: 1200px) {
+  .input-name,
+  .input-adress {
+    padding-bottom: 1.5rem;
+    padding-top: 1.5rem;
+  }
+
   .btn-show {
     flex-basis: 10%;
   }
